--- a/CSS/main.css
+++ b/CSS/main.css
@@ -220,8 +220,13 @@ footer .copy{
     font-size: 10px;
 
 }
-/*----------------------------------------------------------Inicio Home--------------------------------------------------------------*/
-.Carousel{}
+/*----------------------------------------------------------Inicio Random--------------------------------------------------------------*/
+.avatar-edit { 
+vertical-align: middle;
+width: 50px;
+height: 50px;
+border-radius: 50%;
+}
 
 
-/*----------------------------------------------------------Final Home--------------------------------------------------------------*/
+/*----------------------------------------------------------Final Random--------------------------------------------------------------*/
