--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,25 +14,15 @@ body{
 /*-----------------------------------------------------------inicio da navbar-----------------------------------------------------------*/
 nav{
     background: #fff;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
     height: 120px;
-    padding: 0 100px;
     border-bottom:2px solid #00bfa2;
 }
 
 nav .iten-login{
-    display: flex;
     list-style: none;
-    text-transform: uppercase;
-    padding: 0 0 0 10px;
-    margin-right: 20px;
 }
 
 nav .iten-login li{
-    padding: 0 15px 0 15px;
     border-right: 1px solid #00bfa2;
     border-left: 1px solid #00bfa2;
 }
@@ -41,7 +31,6 @@ nav .iten-login li a{
     text-decoration: none;
     color: #0275d8;
     font-size: 18px;
-    display: flex;
 }
 
 nav .iten-login li a:hover{
@@ -49,42 +38,25 @@ nav .iten-login li a:hover{
     transition: .3s;
 }
 
-nav .User-icon{
-    margin-left: 10px;
-}
-nav .logo{
-    font-size: 30px;
-    font-weight: 600;
-    letter-spacing: -1px;
-    position: relative;
-    right: 90px;
-}
 
 nav .nav-itens{
-    display: flex;
     list-style: none;
-    padding: 0 0 0 40px;
-    margin-right: 20px;
-    position: relative;
-    right: 100px;
 }
 
 nav .nav-itens li{
-    padding: 0 15px;
     border-right:1px solid #00bfa2;
 }
 
 nav .nav-itens li a{
     color:#0275d8;
     font-size: 18px;
-    font-weight: 500;
     text-decoration: none;
 }
 nav .nav-itens li a:hover{
     color:#009a53;
 }
 
-nav form{
+/*nav form{
     display: flex;
     height: 40px;
     border-radius: 2px;
@@ -113,23 +85,7 @@ nav form button{
     cursor: pointer;
     font-size: 17px;
     color:#fff;
-}
-
-nav .menu-icon,
-nav .search-icon,
-nav .cancel-icon{
-    width: 40px;
-    color:#fff;
-    text-align: center;
-    font-size: 18px;
-    cursor: pointer;
-    display: none;
-}
-nav .menu-icon,
-nav .search-icon,
-nav .cancel-icon{
-    display: none;
-}
+}*/
 
 /*@media (max-width: 1245px){
     nav{
